Fixed Cards on Dashboard

--- a/assets/css/material-dashboard.css
+++ b/assets/css/material-dashboard.css
@@ -17550,5 +17550,5 @@ pre[class*="language-"] {
 
 .btn.btn-primary.change-UI{
   align-self: flex-start;
-  margin-right: 0;
+  margin-left: 0;
 }
