--- a/assets/css/material-dashboard.css
+++ b/assets/css/material-dashboard.css
@@ -17552,3 +17552,6 @@ button.btn.btn-primary.change-UI{
   align-self: flex-start;
   margin-left: 0;
 }
+.card.change-UI{
+  width:max-content;
+}
