--- a/assets/css/material-dashboard.css
+++ b/assets/css/material-dashboard.css
@@ -17555,3 +17555,6 @@ button.btn.btn-primary.change-UI{
 .card.change-UI{
   width:max-content;
 }
+.container-fluid .py-4 .change-UI{
+  margin-left:0;
+}
